<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffffe673"
    android:id="@+id/activity_main">


    <ViewFlipper
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/flipper"
        >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scenicView">

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="31dp"
                android:id="@+id/radioGroup"
                android:layout_above="@+id/prevButton">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes"
                    android:id="@+id/radioButton1"
                    android:onClick="bad0"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No"
                    android:id="@+id/radioButton2"
                    android:onClick="bad1"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sometimes"
                    android:id="@+id/radioButton3"
                    android:onClick="badhalf"/>


            </RadioGroup>

            <TextView android:text="@string/s1"
                android:textSize="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="38dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Prev"
                android:id="@+id/prevButton"
                android:layout_marginLeft="95dp"
                android:layout_marginStart="95dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="151dp"
                android:onClick="prev"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Next"
                android:id="@+id/nextButton"
                android:layout_alignTop="@+id/prevButton"
                android:layout_toRightOf="@+id/prevButton"
                android:layout_toEndOf="@+id/prevButton"
                android:onClick="next"/>

        </RelativeLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/quickView">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Next"
                android:id="@+id/quickNextButton"
                android:onClick="quickResultPressed"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:rowCount="14"
                android:columnCount="5"
                android:orientation="vertical"
                android:id="@+id/QuickQuestGrid"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/s0"
                    android:textSize="20dp"
                    android:id="@+id/quickquest0"
                    android:layout_row="0"
                    android:layout_column="0" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingBar0"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:rating="5"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/s1"
                    android:textSize="20dp"
                    android:id="@+id/quickquest1"
                    android:layout_row="2"
                    android:layout_column="0" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingBar1"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:rating="5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/s2"
                    android:textSize="20dp"
                    android:id="@+id/quickquest2"
                    android:layout_row="4"
                    android:layout_column="0" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingBar2"
                    android:layout_row="5"
                    android:layout_column="0"
                    android:rating="5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/s3"
                    android:textSize="20dp"
                    android:id="@+id/quickquest3"
                    android:layout_row="6"
                    android:layout_column="0" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingBar3"
                    android:layout_row="7"
                    android:layout_column="0"
                    android:rating="5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/s4"
                    android:textSize="20dp"
                    android:id="@+id/quickquest4"
                    android:layout_row="8"
                    android:layout_column="0" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingBar4"
                    android:layout_row="9"
                    android:layout_column="0"
                    android:rating="5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/s5"
                    android:textSize="20dp"
                    android:id="@+id/textView2"
                    android:layout_row="11"
                    android:layout_column="0" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingBar5"
                    android:layout_row="12"
                    android:layout_column="0"
                    android:rating="5"/>
            </GridLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/resultView"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Your rating is"
                android:id="@+id/RatingText" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/resultRatingBar"
                android:layout_below="@+id/RatingText"
                android:layout_centerHorizontal="true"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/ResultText"
                android:layout_below="@+id/resultRatingBar"
                android:layout_toLeftOf="@+id/editText"
                android:layout_toStartOf="@+id/editText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Percent you wish to tip: \n                  Cost of meal: "
                android:id="@+id/ratingText2"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editText"
                android:background="#fffff7ff"
                android:hint="                   %"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:layout_alignTop="@+id/ratingText2"
                android:layout_toRightOf="@+id/ratingText2"
                android:layout_toEndOf="@+id/ratingText2" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText2"
                android:background="#fffff7ff"
                android:elegantTextHeight="true"
                android:focusable="true"
                android:hint="$"
                android:layout_alignBottom="@+id/ratingText2"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignLeft="@+id/editText"
                android:layout_alignStart="@+id/editText" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Calculate"
                android:id="@+id/calculateButton"
                android:layout_marginTop="9dp"
                android:layout_below="@+id/editText2"
                android:layout_alignLeft="@+id/editText2"
                android:layout_alignStart="@+id/editText2"
                android:onClick="calculate"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="$0.00"
                android:id="@+id/tipText"
                android:layout_marginTop="52dp"
                android:layout_below="@+id/calculateButton"
                android:layout_alignRight="@+id/resultRatingBar"
                android:layout_alignEnd="@+id/resultRatingBar"
                android:layout_marginRight="25dp"
                android:layout_marginEnd="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Your tip:  "
                android:id="@+id/tipText2"
                android:layout_alignTop="@+id/tipText"
                android:layout_toLeftOf="@+id/tipText"
                android:layout_toStartOf="@+id/tipText" />
        </RelativeLayout>

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/splashView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="    Welcome!    "

                android:textSize="40dp"
                android:id="@+id/splashTextView"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="47dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="34dp"
                android:autoText="true"
                android:background="#ffb6ff63"
                android:elegantTextHeight="true"
                android:singleLine="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Select your style"
                android:textSize="20dp"
                android:id="@+id/styleTextView"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Scenic"
                android:id="@+id/ScenicButton"
                android:layout_below="@+id/styleTextView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="28dp"
                android:onClick="switchToScenic"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="QuickList"
                android:id="@+id/QuickButton"
                android:layout_below="@+id/ScenicButton"
                android:layout_alignLeft="@+id/ScenicButton"
                android:layout_alignStart="@+id/ScenicButton"
                android:onClick="switchToQuick"/>

        </RelativeLayout>

    </ViewFlipper>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Home"
        android:id="@+id/homeButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="switchToSplash"/>

</RelativeLayout>
